--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     </main>
     <footer id="contact">
         <p>Contact Us</p>
-        <p>Email: yulin.chen1@my.jcu.edu.au</p>
+        <p>Email: zhenqi.ma@my.jcu.edu.au</p>
         <p>Phone: +65 12345678</p>
-        <p>Copyright © 2023 All Rights Reserved.</p>
+        <p>Copyright © 2024 All Rights Reserved.</p>
     </footer>
 </body>
 </html>
